# python-data-example

./: .dockerignore  .gitignore  2023-complete-dataset-field names and description.csv  2023-complete-dataset-footnote-codes.csv  CHANGELOG.md  DATA_README.md  Dockerfile  LICENSE  MANIFEST.in  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.kiro/specs/occupation-data-reports/: design.md  requirements.md  tasks.md
config/: global_config.yaml  reports_config.yaml
docs/: faq.md  report_types.md  troubleshooting.md  user_guide.md
src/: __init__.py  interfaces.py  main.py
src/analysis/: __init__.py  additive_category_analyzer.py  cognitive_requirements_analyzer.py  correlation_analyzer.py  environmental_risk_analyzer.py  establishment_analyzer.py  occupation_analyzer.py  physical_demands_analyzer.py  quality_assessor.py  statistical_analyzer.py
src/cli/: __init__.py  commands.py  config_validator.py
src/config/: __init__.py  settings.py
src/data_processing/: __init__.py  csv_loader.py  data_cleaner.py  data_processor.py  footnote_processor.py
src/export/: __init__.py  csv_exporter.py  export_manager.py  html_exporter.py  pdf_exporter.py
src/integration/: __init__.py  monitoring.py  pipeline.py
src/visualization/: __init__.py  chart_generator.py  confidence_interval_plotter.py  dashboard_builder.py  heatmap_generator.py
tests/: __init__.py  test_cli_integration.py  test_data_processing.py  test_integration.py  test_quality_assessment.py  test_statistical_analysis.py  test_visualization.py
