# pyproject.toml - Modern Python packaging configuration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "occupation-data-reports"
version = "1.0.0"
description = "A comprehensive Python application for analyzing occupational requirements survey data from the Bureau of Labor Statistics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Occupation Data Reports Team", email = "team@occupation-reports.com"}
]
maintainers = [
    {name = "Occupation Data Reports Team", email = "team@occupation-reports.com"}
]
keywords = [
    "occupational-data",
    "workforce-analysis", 
    "bls-data",
    "labor-statistics",
    "data-science",
    "reporting",
    "visualization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.9.0,<2.0.0",
    "plotly>=5.10.0,<6.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "weasyprint>=56.0,<61.0",
    "reportlab>=3.6.0,<5.0.0",
    "pillow>=9.0.0,<11.0.0",
    "pyyaml>=6.0,<7.0.0",
    "pydantic>=1.10.0,<3.0.0",
    "psutil>=5.9.0,<6.0.0",
    "scikit-learn>=1.1.0,<2.0.0",
    "statsmodels>=0.13.0,<1.0.0",
    "openpyxl>=3.0.0,<4.0.0",
    "click>=8.0.0,<9.0.0",
    "rich>=12.0.0,<14.0.0",
    "tqdm>=4.64.0,<5.0.0",
    "structlog>=22.0.0,<24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "black>=22.0.0,<24.0.0",
    "flake8>=5.0.0,<7.0.0",
    "mypy>=0.991,<2.0.0",
    "isort>=5.10.0,<6.0.0",
    "bandit>=1.7.0,<2.0.0",
    "safety>=2.0.0,<4.0.0",
]
docs = [
    "sphinx>=5.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.0.0,<3.0.0",
    "myst-parser>=0.18.0,<3.0.0",
]
excel = [
    "xlrd>=2.0.0,<3.0.0",
]
all = [
    "occupation-data-reports[dev,docs,excel]",
]

[project.urls]
Homepage = "https://github.com/your-org/occupation-data-reports"
Documentation = "https://occupation-data-reports.readthedocs.io/"
Repository = "https://github.com/your-org/occupation-data-reports"
"Bug Reports" = "https://github.com/your-org/occupation-data-reports/issues"
Changelog = "https://github.com/your-org/occupation-data-reports/blob/main/CHANGELOG.md"

[project.scripts]
occupation-reports = "src.main:main"
ors-reports = "src.main:main"

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
src = [
    "config/*.yaml",
    "config/templates/**/*.html",
    "config/templates/**/*.css",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "tests*",
    "*.pyc",
    "*.pyo",
    "__pycache__",
    ".git*",
    ".DS_Store",
]

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = ["pandas", "numpy", "matplotlib", "plotly", "seaborn", "jinja2", "pyyaml", "pydantic"]

# MyPy type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "plotly.*",
    "seaborn.*",
    "weasyprint.*",
    "reportlab.*",
    "sklearn.*",
    "statsmodels.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit security linting
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process_args

# Flake8 configuration (in setup.cfg since flake8 doesn't support pyproject.toml yet)
# See setup.cfg for flake8 configuration