# setup.cfg - Configuration for tools that don't support pyproject.toml

[metadata]
name = occupation-data-reports
version = 1.0.0
description = A comprehensive Python application for analyzing occupational requirements survey data from the Bureau of Labor Statistics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/occupation-data-reports
author = Occupation Data Reports Team
author_email = team@occupation-reports.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: End Users/Desktop
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Office/Business :: Financial :: Spreadsheet
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False
install_requires =
    pandas>=1.5.0,<3.0.0
    numpy>=1.21.0,<2.0.0
    scipy>=1.9.0,<2.0.0
    plotly>=5.10.0,<6.0.0
    matplotlib>=3.5.0,<4.0.0
    seaborn>=0.11.0,<1.0.0
    jinja2>=3.1.0,<4.0.0
    weasyprint>=56.0,<61.0
    reportlab>=3.6.0,<5.0.0
    pillow>=9.0.0,<11.0.0
    pyyaml>=6.0,<7.0.0
    pydantic>=1.10.0,<3.0.0
    psutil>=5.9.0,<6.0.0
    scikit-learn>=1.1.0,<2.0.0
    statsmodels>=0.13.0,<1.0.0
    openpyxl>=3.0.0,<4.0.0
    click>=8.0.0,<9.0.0
    rich>=12.0.0,<14.0.0
    tqdm>=4.64.0,<5.0.0
    structlog>=22.0.0,<24.0.0

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    pytest>=7.0.0,<8.0.0
    pytest-cov>=4.0.0,<5.0.0
    pytest-mock>=3.10.0,<4.0.0
    black>=22.0.0,<24.0.0
    flake8>=5.0.0,<7.0.0
    mypy>=0.991,<2.0.0
    isort>=5.10.0,<6.0.0
    bandit>=1.7.0,<2.0.0
    safety>=2.0.0,<4.0.0
docs =
    sphinx>=5.0.0,<8.0.0
    sphinx-rtd-theme>=1.0.0,<3.0.0
    myst-parser>=0.18.0,<3.0.0
excel =
    xlrd>=2.0.0,<3.0.0
all =
    %(dev)s
    %(docs)s
    %(excel)s

[options.entry_points]
console_scripts =
    occupation-reports = src.main:main
    ors-reports = src.main:main

[options.package_data]
src =
    config/*.yaml
    config/templates/**/*.html
    config/templates/**/*.css

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
    F401,  # imported but unused (handled by isort)
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info,
    .pytest_cache,
    .mypy_cache,
    docs,
    tests/fixtures
per-file-ignores =
    __init__.py:F401
    tests/*:S101,S106  # Allow assert statements and hardcoded passwords in tests

# MyPy configuration (backup for older versions)
[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-weasyprint.*]
ignore_missing_imports = True

[mypy-reportlab.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-statsmodels.*]
ignore_missing_imports = True

# Tool configuration for older versions
[tool:pytest]
minversion = 7.0
addopts = 
    -ra
    --strict-markers
    --strict-config
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests